# ESPTransit

./: .clang-format  .gitignore  CLAUDE.md  README.md  TODO.md  biome.json  boards.json  mise.toml  mkdocs.yml  prek.toml  pyproject.toml
.github/workflows/: build.yml  docs.yml  release.yml
docs/: development.md  flash.md  getting-started.md  hardware.md  index.md  screenshots  simulator.md  usage.md
docs/assets/: demo.webm
docs/css/: flash.css
docs/js/: flash.js
esp/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.release
esp/components/bsp_jc1060p470c/: CMakeLists.txt  esp32_p4_function_ev_board.c  idf_component.yml  jc1060p470c_lcd_config.h
esp/components/bsp_jc1060p470c/include/bsp/: display.h  esp32_p4_function_ev_board.h
esp/components/bsp_jc4880p443c/: esp32_p4_function_ev_board.c  idf_component.yml  jc4880p443c_lcd_config.h
esp/components/bsp_jc4880p443c/include/bsp/: display.h  esp32_p4_function_ev_board.h
esp/components/bsp_jc8012p4a1c/: esp32_p4_function_ev_board.c  idf_component.yml  jc8012p4a1c_lcd_config.h
esp/components/bsp_jc8012p4a1c/include/bsp/: display.h  esp32_p4_function_ev_board.h
esp/components/bsp_jc8012p4a1c/priv_include/: bsp_err_check.h
esp/components/esp_lcd_touch_gsl3680/: esp_lcd_touch_gsl3680.c
esp/components/esp_lvgl_port/: CHECKSUMS.json  CMakeLists.txt  README.md  project_include.cmake
esp/components/esp_lvgl_port/examples/i2c_oled/main/: CMakeLists.txt  i2c_oled_example_main.c
esp/components/esp_lvgl_port/examples/rgb_lcd/: CMakeLists.txt
esp/components/esp_lvgl_port/examples/rgb_lcd/main/: CMakeLists.txt  main.c
esp/components/esp_lvgl_port/examples/touchscreen/: CMakeLists.txt
esp/components/esp_lvgl_port/examples/touchscreen/main/: CMakeLists.txt  main.c
esp/components/esp_lvgl_port/images/lvgl8/: img_cursor.c
esp/components/esp_lvgl_port/images/lvgl9/: img_cursor.c
esp/components/esp_lvgl_port/include/: esp_lvgl_port.h  esp_lvgl_port_disp.h  esp_lvgl_port_lv_blend.h  esp_lvgl_port_touch.h
esp/components/esp_lvgl_port/src/common/ppa/: lcd_ppa.c  lcd_ppa.h
esp/components/esp_lvgl_port/src/lvgl8/: esp_lvgl_port.c  esp_lvgl_port_button.c  esp_lvgl_port_disp.c  esp_lvgl_port_knob.c  esp_lvgl_port_touch.c  esp_lvgl_port_usbhid.c
esp/components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port.c  esp_lvgl_port_button.c  esp_lvgl_port_disp.c  esp_lvgl_port_knob.c  esp_lvgl_port_touch.c  esp_lvgl_port_usbhid.c
esp/components/esp_lvgl_port/test_apps/lvgl_port/: CMakeLists.txt
esp/components/esp_lvgl_port/test_apps/lvgl_port/main/: CMakeLists.txt  test.c
esp/components/esp_lvgl_port/test_apps/simd/: CMakeLists.txt
esp/components/esp_lvgl_port/test_apps/simd/main/: CMakeLists.txt  lv_fill_common.h  lv_image_common.h  test_app_main.c  test_lv_fill_benchmark.c  test_lv_fill_functionality.c  test_lv_image_benchmark.c  test_lv_image_functionality.c
esp/components/esp_lvgl_port/test_apps/simd/main/lv_blend/include/: lv_assert.h  lv_color.h  lv_draw_sw_blend_to_rgb888.h  lv_log.h  lv_math.h  lv_string.h
esp/components/esp_lvgl_port/test_apps/simd/main/lv_blend/src/: lv_draw_sw_blend_to_argb8888.c  lv_draw_sw_blend_to_rgb565.c  lv_draw_sw_blend_to_rgb888.c  lv_string_builtin.c
esp/main/: CMakeLists.txt  app_platform_esp.cpp  app_state.cpp  app_state.h  http_client.cpp  idf_component.yml  main.cpp  wifi_manager.cpp  wifi_manager.h
scripts/: idf.sh  regenerate_fonts.py  run_cppcheck.py  ui_golden_viewer.py
scripts/ui_golden_viewer_assets/: app.css  app.js  index.html
shared/: app_config_codec.h  app_constants.h  app_manager.cpp  app_manager.h  app_platform.h  http_client.h  http_fetcher.cpp  http_fetcher.h  http_parse.cpp  http_parse.h  http_util.cpp  http_util.h  station_config_utils.cpp  station_config_utils.h  station_products.cpp  station_products.h
shared/ui/: callback_context.h  common.cpp  common.h
shared/ui/components/: card.cpp  card.h  station_badges.cpp  station_badges.h
shared/ui/fonts/: fira_sans.h  fira_sans_14.c  fira_sans_16.c  fira_sans_18.c  fira_sans_20.c  fira_sans_20_bold.c  fira_sans_22.c  fira_sans_24.c  fira_sans_24_bold.c  fira_sans_28.c  fira_sans_28_bold.c  fira_sans_48_bold.c  fira_sans_56_bold.c
shared/ui/screens/: boot.cpp  boot.h  debug.cpp  debug.h  departures.cpp  departures.h  screen_base.h  settings.cpp  settings.h  station_search.cpp  station_search.h  wifi_setup.cpp  wifi_setup.h
simulator/: .gitignore  CMakeLists.txt  README.md  boards_json.cpp.in  lv_conf.defaults
simulator/config/: FreeRTOSConfig.h
simulator/include/freertos/: FreeRTOS.h  queue.h  task.h  timers.h
simulator/src/: app_platform_sim.cpp  config_check.h  freertos_hooks.c  main.cpp  mouse_cursor_icon.c  sim_cli.cpp  sim_cli.h  sim_control.cpp  sim_control.h  sim_env_utils.h  sim_log.cpp  sim_log.h  sim_timing.cpp  sim_timing.h
simulator/src/freertos/: freertos_posix_port.c
simulator/src/mock/: app_state.cpp  app_state.h  esp_err.h  esp_log.h  http_client.cpp  wifi_manager.cpp  wifi_manager.h
simulator/src/mock/bsp/: display.cpp  display.h  esp-bsp.h
tests/ui/: conftest.py  golden_assertions.py  sim_control.py  simulator_process.py  simulator_runner.py  test_simulator_flows.py  test_simulator_screenshots.py
tests/ui/fixtures/: configured_no_stations.json  configured_with_2_stations.json  configured_with_4_stations.json  configured_with_4_stations_nosplit.json  configured_with_station.json
